# case-sel4

./: .gitignore  .gitmodules  readme.md
projects/device/: CMakeLists.txt  main.c
projects/ipc/: CMakeLists.txt  main.c
projects/os_case/: CMakeLists.txt
projects/os_case/include/osutil/: sel4thread.h
projects/os_case/src/: sel4thread.c
projects/sync/: CMakeLists.txt  main.c
projects/thread/src/: main.c
projects/vmm/: CMakeLists.txt  main.c
